--- a/nuxt_src/assets/scss/sponsor/_sponsor.scss
+++ b/nuxt_src/assets/scss/sponsor/_sponsor.scss
@@ -12,8 +12,8 @@
   font-size: 36px;
   text-align: center;
   margin-top: 89px;
-  color: #ACB6E5;
-  background: -webkit-linear-gradient(0deg, #F7D000, #F39200);
+  color: #acb6e5;
+  background: -webkit-linear-gradient(0deg, #f7d000, #f39200);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -38,14 +38,13 @@
 .sponsor_content {
   text-align: left;
   padding: 30px;
-
 }
 .sponsor_name {
-font-weight: bold;
-line-height: 33px;
-font-size: 20px;
-letter-spacing: 0.1em;
-color: #000000;
+  font-weight: bold;
+  line-height: 33px;
+  font-size: 20px;
+  letter-spacing: 0.1em;
+  color: #000000;
 }
 .sponsor_url {
   margin-top: 8px;
@@ -54,7 +53,7 @@ color: #000000;
     line-height: 23px;
     font-size: 14px;
     letter-spacing: 0.1em;
-    color: #00A4DE;
+    color: #00a4de;
   }
 }
 .sponsor_text {
@@ -73,21 +72,21 @@ color: #000000;
   }
   a {
     font-weight: bold;
-    color: #00A4DE;
+    color: #00a4de;
   }
 }
 .sponsor_btn {
-  color: #FFF;
+  color: #fff;
   font-weight: bold;
   line-height: 23px;
   font-size: 14px;
   letter-spacing: 0.1em;
   display: inline-block;
-  background: #00A4DE;
+  background: #00a4de;
   border-radius: 20px;
   padding: 8px 34px 8px 18px;
   margin-top: 35px;
-  background-image: url('~assets/img/common/arrow-next-w.svg');
+  background-image: url("~assets/img/common/arrow-next-w.svg");
   background-repeat: no-repeat;
   background-position: center right 18px;
   background-size: 13px auto;
@@ -96,7 +95,7 @@ color: #000000;
   margin-top: 60px;
   text-align: left;
   padding: 40px;
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
 }
 .inquiry_title {
   font-weight: bold;
@@ -104,7 +103,6 @@ color: #000000;
   font-size: 20px;
   letter-spacing: 0.1em;
   color: #000000;
-
 }
 .inquiry_text {
   margin-top: 20px;
